--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,15 @@ defusedxml==0.6.0
 entrypoints==0.3
 enum34==1.1.6
 Flask==1.1.1
+funcsigs==1.0.2
+futures==3.3.0
 gast==0.2.2
 google-auth==1.10.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
 grpcio==1.26.0
 gunicorn==19.10.0
+gyp==0.1
 h5py==2.10.0
 idna==2.8
 importlib-metadata==1.5.0
@@ -75,6 +78,7 @@ pyasn1-modules==0.2.7
 pycairo==1.16.2
 pycrypto==2.6.1
 Pygments==2.5.2
+pygobject==3.26.1
 pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.8.1
